# ex2_ground_station_software

./: .gitignore  CODEOWNERS  CommandDocs.txt  Dockerfile  README.md  SCHEDULER.md  build-ground.sh  docker-build.sh  docker-run.sh  init_tmux.sh  install.sh  main.c  makefile  package.json  refresh.sh  schedule.txt  schedule_error_codes.txt  uhf_commands
.github/workflows/: docgen.yml
CommsSim/src/: i2c.c  i2c.h  pause.c  uTransceiver.c  uTransceiver.h
CommsSim/test/: test_uTransceiver.c
Inc/: system.h
Src/: commandParser.py  groundStation.py  groundstation.py  main.c  python_bindings_example_client.py  system.py
doc/: NIM_Response_Table.md  SCHEDULER.md  data_field_2_table.dot  readme_updater.md
equipment_handler/include/: i2c.c  i2c.h  i2c_dummy.h  uTransceiver.h  uart.h  uhf_i2c.h  uhf_uart.h
equipment_handler/source/: i2c.c  i2c_dummy.c  uTransceiver.c  uart.c  uart.c.orig  uhf_i2c.c  uhf_uart.c
equipment_handler/test/: test_uTransceiver.c  uhf_binary_tests.c
ex2_sdr/: meson.build
ex2_sdr/doc/: mac_table.dot
ex2_sdr/include/configuration/: configuration.h
ex2_sdr/include/error_control/: error_correction.hpp  golay.h
ex2_sdr/include/error_control/qcldpc/: ldpc.h  parity_check.h
ex2_sdr/include/mac_layer/: mac.hpp
ex2_sdr/include/mac_layer/pdu/: mpdu.hpp
ex2_sdr/include/phy_layer/: phy.hpp  rfMode.hpp
ex2_sdr/include/phy_layer/pdu/: ppdu_cf.hpp  ppdu_f.hpp  ppdu_u32.hpp  ppdu_u8.hpp
ex2_sdr/include/utilities/: vectorTools.h  version.h
ex2_sdr/lib/configuration/: configuration.cpp
ex2_sdr/lib/error_control/: crc.cpp  scrambler.cpp
ex2_sdr/lib/error_control/qcldpc/: ldpc.cpp  parity_check.cpp
ex2_sdr/lib/mac_layer/pdu/: mpduHeader.cpp
ex2_sdr/lib/pdu/: pdu.cpp
ex2_sdr/lib/phy_layer/pdu/: ppdu_f.cpp  ppdu_u8.cpp
ex2_sdr/lib/utilities/: vectorTools.cpp
ex2_sdr/src/: ex2_uhf_trx.cpp
ex2_uhf_software/: .gitignore  Contributing.md  README.md  build.sh
ex2_uhf_software/equipment_handler/include/: gnuradio_interface.h  uTransceiver.h  uhf_i2c.h
ex2_uhf_software/equipment_handler/source/: gnuradio_interface.c  uTransceiver.c
ex2_uhf_software/equipment_handler/test/: test_uTransceiver.c
ex2_uhf_software/hardware_interface/include/: uhf.h
hardware_interface/include/: uhf.h
hardware_interface/source/: uhf.c  uhf_hal.c
include/: FreeRTOSConfig.h
include/error_control/: crc.hpp  scrambler.hpp
include/mac_layer/pdu/: mpduHeader.hpp
include/pdu/: pdu.hpp
lib/app_layer/: app.cpp
lib/app_layer/pdu/: apdu.cpp
lib/error_control/: error_correction.cpp  golay.cpp
lib/mac_layer/: mac.cpp  mac_high.cpp  mac_low.cpp
lib/mac_layer/pdu/: mpdu.cpp
lib/phy_layer/: modulation.cpp  phy.cpp
lib/phy_layer/pdu/: ppdu_cf.cpp  ppdu_u32.cpp
lib/utilities/: version.cpp
sBandSim/src/: i2c.h  sTransmitter.c  sTransmitter.h  spi.h
sBandSim/test/: test_sTransmitter.c
scripts/: calibrateALFAMD.py  enable_rotor.exp  install.sh  kill_rotor.exp  record_terminal.sh  rotor_east.sh  setALFAMD.py  telnet_login.exp
src/: CSPHandler.py  GNURadioHandler.py  beaconDecoder.py  cli.py  commandParser.py  connectionManager.py  docGen.py  dummyUtils.py  embedCSP.py  eps_updater.py  ex2_uhf_trx.h  ftp.py  groundStation.py  groundstation.py  inputHandler.py  inputParser.py  interactiveHandler.py  listener.py  main.c  options.py  packetUtils.py  receiveNVoices.py  receiveParser.py  sat_cli.py  scheduleParser.py  system.py  test.py  test_sband.py  test_uhf.py  uTransceiver.py  uhfUnsticker.py  updater.py
src/groundStation/: __init__.py  cliGroundStation.py  commandParser.py  ftp.py  groundStation.py  system.py  uTransceiver.py  updater.py
src/groundStation/ftp/: TEST.TXT
src/refactor/: CSPHandler.py  cli.py  command_history.txt  connectionManager.py  embedCSP.py  ftp.py  groundStation.py  inputHandler.py  inputParser.py  interactiveHandler.py  options.py  packetBreaker.py  packetMaker.py  packetUtils.py  receiveParser.py  sat_cli.py  system.py  transactionhandler.py  uTransceiver.py  updater.py
test/: functionalTestLib.py  groundstation_tester.py  testLib.py  test_audio.py  test_dfgm.py  test_eps.py  test_eps_hk_only.py  test_flatsat_adcs.py  test_flatsat_aurora.py  test_flatsat_charon_and_gps.py  test_flatsat_core_comp.py  test_flatsat_deployables.py  test_flatsat_dfgm.py  test_flatsat_iris.py  test_flatsat_sband.py  test_flatsat_solar_panels.py  test_flatsat_yukon.py  test_ftp.py  test_full_flatsat.py  test_full_functional_aurorasat.py  test_full_functional_ex_alta2.py  test_full_functional_yukonsat.py  test_full_hk.py  test_iris.py  test_partial_functional_aurorasat.py  test_partial_functional_ex_alta2.py  test_partial_functional_yukonsat.py  test_sband.py  test_scheduler.py  test_updater.py  tester.py
test/adcs/: expected_adcs_hk.py
test/charon/: expected_charon_hk.py
test/dfgm/: expected_dfgm_hk.py
test/eps/: expected_eps_hk.py
test/flatsat_tests/: functionalTestLib.py  test_adcs.py  test_aurora.py  test_charon_and_gps.py  test_core_comp.py  test_deployables.py  test_dfgm.py  test_full_flatsat.py  test_iris.py  test_sband.py  test_solar_panel.py  test_yukon.py
test/iris/: expected_iris_hk.py
test/nim/: expected_nim_hk.py
test/obc/: expected_obc_hk.py
test/sband/: expected_sband_hk.py  test_sband.py  test_sband_hardware.py
test/solar/: expected_solarPanel_hk.py
test/uhf/: expected_uhf_hk.py  test_uhf.py  test_uhf_hardware.py
test/yukon/: expected_yukon_hk.py
unit_tests/: meson.build  qa_golay.cpp
